feat: add dynamic content

--- a/index.html
+++ b/index.html
@@ -15,63 +15,20 @@
     <aside class="sidebar">
         <img src="./assets/photo_2019-09-19_20-54-44.jpg" class="portrait" height="200" width="200" alt="portrait">
         <nav class="navigation-wrapper">
-            <ul class="navigation">
-                <li><a>About me</a></li>
-                <li><a>Skills</a></li>
-                <li><a>Code examples</a></li>
-                <li><a>Experience</a></li>
-                <li><a>Education</a></li>
+            <ul class="navigation" id="navigation">
+                <li><a href="#" class="about">About me</a></li>
+                <li><a href="#" class="skills">Skills</a></li>
+                <li><a href="#" class="examples">Code examples</a></li>
+                <li><a href="#" class="experience">Experience</a></li>
+                <li><a href="#" class="education">Education</a></li>
             </ul>
         </nav>
         <hr class="screen-split">
     </aside>
-    <main class="main-section">
-        <section class="about-section">
+    <main class="main-section" id="main">
+         <section class="about-section">
             <h3 class="section-header">About me</h3>
             <p class="about-text">I'm a junior front-end developer. I've decided to become a front-end dev on my third year in the university. There were some classes about web-dev basics. After few doubles I understood, that it's the thing I really like. My goal is to learn as much as possible to be proud of things I do. It's not about prestige or something like that, front-end is something inspiring, kind of art, where you can create beautiful and useful applications and every time tou will learn a lot of new information. So, my goal is to do my best.</p>
-        </section>
-        <section class="skills-section">
-            <h3 class="section-header">Professional skills</h3>
-            <ul class="skills-list">
-                <li>Programming languages: <em>HTML/SCC/Javascript, TypeScript/flow basics</em></li>
-                <li>Frameworks: <em>Angular basics, ReactNative, GQL (ApolloClient)</em></li>
-                <li>Libraries: <em>React, CSS frameworks (bootstrap, foundation, skeleton)</em></li>
-                <li>Version control: <em>Git</em></li>
-                <li>Tools (IDEs): <em>VSCode, WebStorm, Notepad++</em></li>
-                <li>Methodologies: <em>Agile experience (about 2 months - Trello)</em></li>
-            </ul>
-        </section>
-        <section class="examples-section">
-            <h3 class="section-header">Code examples</h3>
-            <p class="examples-text">You can find some examples of my code <a href="https://github.com/jrzlve">HERE</a></p>
-            <ul class="examples-list">
-                <lh>The latest examples are:</lh>
-                <li>Sweep commits (few screens for SweepTravel app) - ReactNative</li>
-                <li><a href="https://github.com/jrzlve/rn-proj">ReactNative test project</a></li>
-            </ul>
-        </section>
-        <section class="experience-section">
-            <h3 class="section-header">Front-end experience</h3>
-            <ul class="experience-list">
-                <li>ITechArt students lab - <a href="https://github.com/jrzlve/rn-proj">ReactNative</a></li>
-                <li>RollingScopesSchool - <a href="https://github.com/jrzlve/game">Game</a></li>
-                <li>Course projects - few landing pages</li>
-                <li>Diploma project - modernization of the web-site using React to improve performance + accessibility changes</li>
-            </ul>
-        </section>
-        <section class="education-section">
-            <h3 class="section-header">Education</h3>
-            <ul class="education-list">
-                <li>BSUIR, e-business economics, Economist-Programmer (2014-2019)</li>
-                <li>BSUIR, electronic economics master course, (2019-2021)</li>
-                <li>RSS (2 stages in 2018)</li>
-                <li>ITechArt front-end lab</li>
-                <li>Minsk css/js conferences</li>
-                <li>UI/UX conferences</li>
-                <li>Web-standards day conf + podcasts</li>
-                <li>self-learning (documentation, learnjs, medium, mdn, etc.)</li>
-                <li>English - Intermediate (B1)</li>
-            </ul>
         </section>
     </main>
     <footer class="contacts">
@@ -82,5 +39,6 @@
             <li>Telegram: <a href="https://t.me/jrzlve">@jrzlve</a></li>
         </ul>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
