--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main class="main-section" id="main">
          <section class="about-section">
             <h3 class="section-header">About me</h3>
-            <p class="about-text">I'm a junior front-end developer. I've decided to become a front-end dev on my third year in the university. There were some classes about web-dev basics. After few doubles I understood, that it's the thing I really like. My goal is to learn as much as possible to be proud of things I do. It's not about prestige or something like that, front-end is something inspiring, kind of art, where you can create beautiful and useful applications and every time tou will learn a lot of new information. So, my goal is to do my best.</p>
+            <p class="about-text">I'm a junior front-end developer. I've decided to become a front-end dev on my second year in the university. There were some classes about web-dev basics. After few doubles I understood, that it's the thing I really like. My goal is to learn as much as possible to be proud of things I do. It's not about prestige or something like that, front-end is something inspiring, kind of art, where you can create beautiful and useful applications and every time tou will learn a lot of new information. So, my goal is to do my best.</p>
         </section>
     </main>
     <footer class="contacts">
